--- a/personal/templates/personal/header.html
+++ b/personal/templates/personal/header.html
@@ -21,7 +21,7 @@
 			  <div class="col-sm-2">
 				  <br>
 				  <center>
-						<img src="{% static 'personal/img/profile.jpg' %}" class="responsive-img" style='max-height:100px;' alt="face">
+						<img src="{% static 'personal/img/profile.png' %}" class="responsive-img" style='max-height:100px;' alt="face">
 				  </center>
 			  </div>
 			  <div class="col-sm-10">
